добавил ручку /users
