# backend/internal/models/models.go
@@ -15,26 +15,26 @@ type User struct {
 	PasswordHash string    `json:"password_hash"`
 	RoleID       int       `json:"role_id"`
 	CreatedAt    time.Time `json:"created_at"`
+	RoleName     string    `json:"role_name" db:"role_name"`
 }
 
 //================================
 
 // Listing - объект размещения
 type Listing struct {
-	ID            uuid.UUID `db:"id"`
-	Code          uuid.UUID `db:"code"` // UUID код объекта размещения во внешней платформе (Островок)
-	Title         string    `db:"title"`
-	Description   string    `db:"description"`
-	MainPicture   *string   `db:"main_picture"`
-	ListingTypeID int       `db:"listing_type_id"`
-	Address       string    `db:"address"`
-	City          string    `db:"city"`
-	Country       string    `db:"country"`
-	Latitude      float64   `db:"latitude"`
-	Longitude     float64   `db:"longitude"`
-	CreatedAt     time.Time `db:"created_at"`
-	// IsActive      bool        `db:"is_active"`
-	ListingType ListingType `db:"-"`
+	ID            uuid.UUID   `db:"id"`
+	Code          uuid.UUID   `db:"code"` // UUID код объекта размещения во внешней платформе (Островок)
+	Title         string      `db:"title"`
+	Description   string      `db:"description"`
+	MainPicture   *string     `db:"main_picture"`
+	ListingTypeID int         `db:"listing_type_id"`
+	Address       string      `db:"address"`
+	City          string      `db:"city"`
+	Country       string      `db:"country"`
+	Latitude      float64     `db:"latitude"`
+	Longitude     float64     `db:"longitude"`
+	CreatedAt     time.Time   `db:"created_at"`
+	ListingType   ListingType `db:"-"`
 }
 
 // ListingType - тип объекта размещения
