# backend/internal/secret_guest/handler.go
@@ -260,7 +260,7 @@ func (h *SecretGuestHandler) GetListings(w http.ResponseWriter, r *http.Request)
 
 	listings, err := h.service.GetListings(ctx, dto)
 	if err != nil {
-		log.Error(ctx, "Failed to get active listings", zap.Error(err))
+		log.Error(ctx, "Failed to get listings", zap.Error(err))
 		h.writeErrorResponse(ctx, w, http.StatusInternalServerError, "Internal server error")
 		return
 	}
@@ -2076,4 +2076,39 @@ func (h *SecretGuestHandler) GenerateUploadURL(w http.ResponseWriter, r *http.Re
 	}
 
 	h.writeJSONResponse(ctx, w, http.StatusOK, resp)
+}
+
+// users
+
+// @Summary      Get All Users (Staff)
+// @Security     BearerAuth
+// @Description  Returns a paginated list of all users. Available for staff only.
+// @Tags         Users (Staff)
+// @Produce      json
+// @Param        page query int false "Page number for pagination" default(1)
+// @Param        limit query int false "Number of items per page" default(50)
+// @Param Authorization header string true "Bearer Access Token"
+// @Success      200 {object} secret_guest.UsersResponse
+// @Failure      401 {object} ErrorResponse "Unauthorized"
+// @Failure      403 {object} ErrorResponse "Forbidden"
+// @Failure      500 {object} ErrorResponse "Internal server error"
+// @Router       /users [get]
+func (h *SecretGuestHandler) GetAllUsers(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+	log := logger.GetLoggerFromCtx(ctx)
+
+	page, limit := h.parsePagination(r)
+	dto := GetAllUsersRequestDTO{
+		Page:  page,
+		Limit: limit,
+	}
+
+	users, err := h.service.GetAllUsers(ctx, dto)
+	if err != nil {
+		log.Error(ctx, "Failed to get all users", zap.Error(err))
+		h.writeErrorResponse(ctx, w, http.StatusInternalServerError, "Internal server error")
+		return
+	}
+
+	h.writeJSONResponse(ctx, w, http.StatusOK, users)
 }
